--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get: ^4.6.6
   flutter_screenutil: ^5.9.0
   http: ^1.2.1
+  shared_preferences: ^2.2.3
+
 
 dev_dependencies:
   flutter_test:
