--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   http: ^1.2.1
   shared_preferences: ^2.2.3
+  connectivity_plus: ^6.0.3
 
 
 dev_dependencies:
